[package]
name = "mgmt"
version = "0.1.0"
edition = "2021"
description = "Deploys microservices for the Discovery Environment."

[[bin]]
name = "mgmt"
path = "src/main.rs"

[[bin]]
name = "mgmt-configs"
path = "src/bin/mgmt-configs/main.rs"

[[bin]]
name = "mgmt-container-images"
path = "src/bin/mgmt-container-images/main.rs"

[[bin]]
name = "mgmt-site"
path = "src/bin/mgmt-site/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["history"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_merge = "0.1.3"
serde_yaml = "0.9.21"
sqlx = { version = "0.7", features = ["mysql", "uuid", "runtime-tokio", "tls-rustls", "chrono", "postgres"] }
tokio = { version = "1.28.2", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
which = "4.4.0"
