[package]
name = "mgmt"
version = "0.1.0"
edition = "2021"
description = "Deploys microservices for the Discovery Environment."

[[bin]]
name = "mgmt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.4"
clap = { version = "4.1.6", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["history"] }
duct = "0.13.6"
flate2 = { version = "1.0.27" }
indicatif = { version = "0.17.6", features = ["futures", "tokio"] }
reqwest = { version = "0.11.20", features = ["json", "blocking", "rustls", "tokio-rustls", "rustls-tls"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_merge = "0.1.3"
serde_yaml = "0.9.21"
sqlx = { version = "0.7", features = ["mysql", "uuid", "runtime-tokio", "tls-rustls", "chrono", "postgres"] }
tar = "0.4.40"
tera = "1.19.1"
thiserror = "1.0.48"
tokio = { version = "1.28.2", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
which = "4.4.0"
